@@ -1,4 +1,4 @@
-# $Id: Makefile,v 3.14 2000-09-03 16:11:25 ddr Exp $
+# $Id: Makefile,v 3.15 2000-09-08 01:58:14 ddr Exp $
 
 DESTDIR=distribution
 
@@ -76,9 +76,9 @@ classical_distrib:
 	cp src/gwu $(DESTDIR)/gwu$(EXE)
 	cp ged2gwb/ged2gwb $(DESTDIR)/ged2gwb$(EXE)
 	cp gwb2ged/gwb2ged $(DESTDIR)/gwb2ged$(EXE)
-	cp gwtp/gwtp $(DESTDIR)/gwtp$(EXE)
 	mkdir $(DESTDIR)/gwtp_tmp
-	cp gwtp/*.txt $(DESTDIR)/gwtp_tmp/.
+	cp gwtp/gwtp $(DESTDIR)/gwtp_tmp/gwtp$(EXE)
+	cp gwtp/*.txt gwtp/README $(DESTDIR)/gwtp_tmp/.
 	cp etc/LISEZMOI.txt $(DESTDIR)/.
 	cp etc/README.txt $(DESTDIR)/.
 	cp etc/INSTALL.htm $(DESTDIR)/.
